Skip ALTS